<resources>
    <string name="app_name">Calculator</string>
    <string name="zero" translatable="false">0</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="add" translatable="false">+</string>
    <string name="sub" translatable="false">-</string>
    <string name="mul" translatable="false">×</string>
    <string name="div" translatable="false">÷</string>
    <string name="calculate" translatable="false">=</string>
    <string name="clear" translatable="false">c</string>
    <string name="del" translatable="false">&lt;</string>
    <string name="percent" translatable="false">%</string>
    <string name="sign" translatable="false">±</string>
    <string name="dec_sep">.</string>
</resources>